WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270715
REGRESSION (
274626@main
): [ iOS Debug ]media/video-autoplay.html and media/video-element-other-n amespace-crash.html are constant crashes (270485)
https://bugs.webkit.org/show_bug.cgi?id=270715
Summary
REGRESSION (274626@main): [ iOS Debug ]media/video-autoplay.html and media/vi...
Dana Estra
Reported
2024-03-08 14:42:18 PST
REGRESSION (
274626@main
): [ iOS Debug ]media/video-autoplay.html and media/video-element-other-n amespace-crash.html are constant crashes (270485)
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2024-03-08 14:42:29 PST
<
rdar://problem/124034839
>
Dana Estra
Comment 2
2024-03-08 14:47:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25648
EWS
Comment 3
2024-03-11 14:49:20 PDT
Committed
275930@main
(26d42d0752d1): <
https://commits.webkit.org/275930@main
> Reviewed commits have been landed. Closing PR #25648 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug