REGRESSION (274626@main): [ iOS Debug ]media/video-autoplay.html and media/video-element-other-n amespace-crash.html are constant crashes (270485) https://bugs.webkit.org/show_bug.cgi?id=270715 rdar://124034839

Reviewed by Jer Noble.

Replacing CompletionHandler with Function to fix crash caused by not calling
the completion handler in all cases. Unskipping tests that were affected.

* LayoutTests/platform/ios-wk2/TestExpectations:
* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKit.h:
* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKit.mm:
(WebCore::VideoPresentationInterfaceAVKit::presentFullscreen):
(WebCore::VideoPresentationInterfaceAVKit::dismissFullscreen):
* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::presentFullscreen):
(WebKit::VideoPresentationInterfaceLMK::dismissFullscreen):

Canonical link: https://commits.webkit.org/275930@main